Fix collections tree layout on mobiles

--- a/src/scss/components/_collection-tree.scss
+++ b/src/scss/components/_collection-tree.scss
@@ -3,8 +3,12 @@
 // --------------------------------------------------
 
 .collection-tree {
-	height: calc(100% - 160px); // temporary solution to stop collection tree and tag selector
-				 				// from overlapping
+	height: 100%;
+
+	@include mouse-and-bp-up(md) {
+		height: calc(100% - 160px); // temporary solution to stop collection tree and tag selector
+					 				// from overlapping
+	}
 
 	.desktop-header {
 		display: flex;
